[package]
authors = ["jjy <jjyruby@gmail.com>"]
description = "(Namada fork) Sparse merkle tree implement in rust"
edition = "2018"
license = "MIT"
name = "nam-sparse-merkle-tree"
repository = "https://github.com/anoma/sparse-merkle-tree"
version = "0.3.3-nam.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blake2b = ["blake2b-rs"]
default = ["std", "blake2b", "borsh"]
std = []

[dependencies]
blake2b-rs = {version = "0.2.0", optional = true}
borsh = {version = "1.2.0", optional = true, features = ["unstable__schema", "derive"]}
cfg-if = "1.0.0"
ics23     = { git = "https://github.com/permissionlessweb/ics23"}
itertools = "0.14.0"
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4"
proptest = "1.0.0"
rand = "0.8.3"
random-string = "1.0.0"

[[bench]]
harness = false
name = "smt_benchmark"
